--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
 
     <script type="module" >
-       import { createApp, ref } from 'https://unpkg.com/vue@3/dist/vue.esm-browser.js'
+       import { createApp} from 'https://unpkg.com/vue@3/dist/vue.esm-browser.js'
 
         createApp({
             data(){
