--- a/03-AttributeBinding.html
+++ b/03-AttributeBinding.html
@@ -14,6 +14,10 @@
      <span v-bind:class='red11'>This is Test</span>  <br>
      <span :id="blue11">This is Second Test</span>
      <!-- 콜론만 적어도 v-bind와 같은 효과 -->
+
+     <div :class="{ active: isActive }"> 이것이 적용되나요? </div>
+     <!-- 클래스를 동적으로 바인딩 했으므로, isActive가 true라면 active가 바인딩 되어 해당 클래스의 스타일이 적용된다.
+     예를 들어, 버튼 클릭 이벤트로 isActive를 true 혹은 false로 변경해 스타일을 변환 시킬 수 있다. -->
   </div>
 <script type="module" >
   import {createApp, ref, reactive} from 'https://unpkg.com/vue@3/dist/vue.esm-browser.js'
@@ -22,9 +26,11 @@
     setup(){
       const red11=ref('red')
       const blue11=ref('blue')
+      const isActive = ref(true);
       return{
         red11,
         blue11,
+        isActive,
       }
     }
   }).mount('#app')    
@@ -38,7 +44,11 @@
     color:blue;
     font-size:20px;
   }
+  .active {
+	font-weight: 900;
+  }
 </style>
+
 
   
 </body>
