--- a/03-AttributeBinding.html
+++ b/03-AttributeBinding.html
@@ -16,7 +16,8 @@
      <!-- 콜론만 적어도 v-bind와 같은 효과 -->
 
      <div :class="{ active: isActive }"> 이것이 적용되나요? </div>
-     <!-- 클래스를 동적으로 바인딩 했으므로, isActive가 true라면 active가 바인딩 되어 해당 클래스의 스타일이 적용된다.
+     <!-- <div class="acitve">와 동일
+      클래스를 동적으로 바인딩 했으므로, isActive가 true라면 active가 바인딩 되어 해당 클래스의 스타일이 적용된다.
      예를 들어, 버튼 클릭 이벤트로 isActive를 true 혹은 false로 변경해 스타일을 변환 시킬 수 있다. -->
   </div>
 <script type="module" >
