--- a/07-List Rednering1.html
+++ b/07-List Rednering1.html
@@ -15,7 +15,7 @@
     <ul>
       <li v-for="(arr, index) in array" :key="index">{{arr.id}} - {{arr.text}}-인덱스:{{index}}</li>
       <!-- 배열인 경우 (arr, index)의 2번째 인자가 인덱스(이름은 임의)로 약속되어 있다. -->
-      <!--v-bind:key="index" -> 배열을 돌릴때는 반듯이 키를 넣어줘야 한다. -->
+      <!--v-bind:key="index" -> 배열을 돌릴때는 반듯이 키를 넣어줘야 한다. 키는 행의 유일한 값으로 구별될 만한 것을 지정해주면 된다.-->
     </ul>
 
   </div>
