--- a/08.Computed.html
+++ b/08.Computed.html
@@ -7,19 +7,25 @@
 </head>
 <body>
   <div id="app">
-    {{totalAge()}}
+    <ul>
+      <li v-for="item in items">{{item.id}}.Name:{{item.name}}, Age:{{item.age}}</li>
+    </ul>
+    나이 합계:{{totalAge()}} <br>
+    computed()를 사용한 합계{{sum}} <br>
+    <!-- computed를 이용하면 위처럼 totalAge()처럼 괄호를 쓰지 않아도 된다. -->
+    제일 작은 나이:{{minAge().age}}<br>
   </div>
 
 <script type="module">
-import {createApp, ref, reactive} from 'https://unpkg.com/vue@3/dist/vue.esm-browser.js'
+import {createApp, ref, reactive, computed} from 'https://unpkg.com/vue@3/dist/vue.esm-browser.js'
 
 createApp({
   setup(){
     const items=reactive([
       {id:1, name:'erlia', age:22},
-      {id:2, name:'martin', age:30},
-      {id:3, name:'ace', age:45},
-      {id:4, name:'axis', age:54},
+      {id:2, name:'martin', age:5},
+      {id:3, name:'ace', age:2},
+      {id:4, name:'axis', age:11},
     ])
 
     function totalAge(){
@@ -27,10 +33,25 @@ createApp({
     }
 
     //reduce()는 배열의 함수이다.인자로(콜백함수, 배열인덱스의 초기값)
+    //배열의 요소를 어떠한 연산을 통해서 하나의 값으로 반환하는 함수이다.
+    //여기서는 콜백함수가 나이를 누적시키는 연산을 해서 최종값을 반환하는 결과를 도출했다.
+
+    const sum=computed(totalAge)
+
+    function minAge(){
+      return items.reduce(
+        (acc, cur)=>{
+          if(acc.age>cur.age) return cur
+        else return acc
+      }
+     )}
+    
 
     return{
       items,
       totalAge,
+      sum,
+      minAge,
     }
   }
 }).mount('#app')
