--- a/09-LifeCycle.html
+++ b/09-LifeCycle.html
@@ -8,7 +8,7 @@
 <body>
   <div id="app">
     <span ref="pTag">하이</span>   <br>
-      <!-- 1.ref="pTag" 이부분을 연결함 -->
+      <!-- 1.ref="pTag" 이부분을 pTag=ref()로 연결함 -->
     <button @click='buttonEvent'>Click!!</button>
 
   </div>
