--- a/11-Components.html
+++ b/11-Components.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Components</title>
   <!-- 컴포넌트는 프로그래머가 유저용태그를 새로 만든다고 생각해라 
-   SFC(single file component를 이용한 작성은 더 간단하다...편리..검색해보삼)-->
+   SFC(single file component를 이용한 작성은 더 간단하다.   .vue파일을 만들어서 import하여 사용->형식이 조금 다름)-->
 </head>
 
 <body>
