--- a/11-Components.html
+++ b/11-Components.html
@@ -16,7 +16,7 @@
 
   <script type="module" >
     import {createApp, ref, reactive, computed, onMounted, watch} from 'https://unpkg.com/vue@3/dist/vue.esm-browser.js'
-    import ChildComp from './js/child-comp.js'
+    import ChildComp from './js/child-comp1.js'
     //1.자바스크립트에서 작성한 것을 가져와서
 
     createApp({
