--- a/14-Slot.html
+++ b/14-Slot.html
@@ -12,7 +12,7 @@
         만든 컴포넌트가 보인다. -->
     </div>
     <script type="module">
-        import {createApp, ref, reactive, computed, onMounted, watch} from 'https://unpkg.com/vue@3/dist/vue.esm-browser.js'
+        import {createApp, ref, reactive, computed, onMounted, watch} from './js/vue.esm-browser.js'
         import ChildComp from './js/child-comp4.js'
 
         createApp({
